--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -18,8 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev-react\" \"npm run dev-electron\"",
-    "dev-react": "cross-env BROWSER=none npm start",
+    "dev": "concurrently \"yarn dev-react\" \"yarn dev-electron\"",
+    "dev-react": "cross-env BROWSER=none yarn start",
     "dev-electron": "wait-on http://localhost:3000 && electron .",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -47,7 +47,8 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "electron": "^23.1.1",
+    "devtron": "^1.4.0",
+    "electron": "^7.3.3",
     "electron-is-dev": "^2.0.0",
     "nodemon": "^2.0.20",
     "wait-on": "^7.0.1"
