--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cloud-doc",
   "version": "0.1.0",
+  "main": "main.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +13,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "concurrently \"npm run dev-react\" \"npm run dev-electron\"",
+    "dev-react": "cross-env BROWSER=none npm start",
+    "dev-electron": "wait-on http://localhost:3000 && electron .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "electron": "^23.1.1",
+    "electron-is-dev": "^2.0.0",
+    "nodemon": "^2.0.20",
+    "wait-on": "^7.0.1"
   }
 }
