--- a/electron-quick-start/package.json
+++ b/electron-quick-start/package.json
@@ -17,6 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "devtron": "^1.4.0",
     "electron": "^5.0.6",
     "nodemon": "^2.0.20"
   }
