--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -13,10 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.2",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.58.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1",
+    "react-simplemde-editor": "^4.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,10 +49,8 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "devtron": "^1.4.0",
-    "electron": "^7.3.3",
+    "electron": "^23.1.2",
     "electron-is-dev": "^2.0.0",
-    "nodemon": "^2.0.20",
     "wait-on": "^7.0.1"
   }
 }
