--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
     "react-simplemde-editor": "^4.1.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
