--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -8,9 +8,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.2",
     "classnames": "^2.3.2",
     "react": "^16.8.6",
@@ -50,8 +47,11 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "electron": "^23.1.2",
+    "electron": "^8.5.5",
     "electron-is-dev": "^2.0.0",
     "wait-on": "^7.0.1"
+  },
+  "engines": {
+    "node": "^12.22.12"
   }
 }
