--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^4.6.2",
     "classnames": "^2.3.2",
+    "electron-store": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
